<resources>
    <string name="app_name">Photo Blogs</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to">Welcome to</string>
    <string name="photo_blog">Photo Blogs</string>
    <string name="your_email">Your Email...</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="login_to_account">Login in your account</string>
    <string name="your_password">Your Password</string>
    <string name="action_search_text">Search</string>
    <string name="account_setting_text">Account settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="setup_btn_text">Save account settings</string>
    <string name="post_description_hint">Add Description</string>
    <string name="new_post_btn_hint">Post Blog</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Blog_username">USERNAME</string>
    <string name="blog_post_date">Blog post Date</string>
    <string name="hy_shree_here_it_is_my_first_post_enjoy_guys_new_blog_app_hhhbn_h_jn_hjbhjjkbuyjhbmnvhj_mnbhjbhjvfyhjbjyuh">hy shree here! it is my first post enjoy guys new blog app hhhbn h jn hjbhjjkbuyjhbmnvhj mnbhjbhjvfyhjbjyuh</string>
    <string name="todo">TODO</string>
    <string name="comment_noti">User commented on your post</string>
</resources>
